[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/HUD/Decks/DrawPile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HUD/Decks/ExhaustPile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD/Decks/DiscardPile.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD/Hand/Hand.tscn" type="PackedScene" id=9]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 576.437, 440.296 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 23.6014, 935.507 ]
}

[node name="CenterBottom" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -256.0
margin_right = 512.0
mouse_filter = 2
custom_constants/margin_right = 80
custom_constants/margin_left = 80
__meta__ = {
"_edit_lock_": true
}

[node name="Hand" parent="CenterBottom" instance=ExtResource( 9 )]

[node name="DrawPile" parent="." instance=ExtResource( 1 )]
margin_left = 23.6014
margin_top = 440.296
margin_right = -936.399
margin_bottom = -95.7039

[node name="DiscardPile" parent="." instance=ExtResource( 4 )]
margin_left = 935.507
margin_top = 440.296
margin_right = -24.4934
margin_bottom = -95.7034

[node name="ExhaustPile" parent="." instance=ExtResource( 3 )]
margin_left = 935.507
margin_top = 352.41
margin_right = -24.4935
margin_bottom = -183.59
